--- a/index.html
+++ b/index.html
@@ -3,100 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amai - Tienda de Postres</title>
+    <title>Amai - Postres Deliciosos</title>
     <style>
+        /* Estilos generales */
         body {
             font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #FFDEE9, #B5FFFC);
         }
-        header {
-            background-color: #F6A5C0;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
             padding: 20px;
-            text-align: center;
-            color: #fff;
         }
-        nav {
+        /* Encabezado */
+        header {
+            background-color: #FFC0CB; /* Rosa claro */
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+        h1 {
+            font-size: 2.5rem;
+        }
+        /* Contenido principal */
+        .main-content {
+            padding: 20px;
+        }
+        /* Iconos de redes sociales */
+        .social-icons {
             display: flex;
             justify-content: center;
-            background-color: #F8BBD0;
-        }
-        nav a {
-            padding: 14px 20px;
-            display: block;
-            color: #fff;
-            text-decoration: none;
-        }
-        nav a:hover {
-            background-color: #F48FB1;
-        }
-        section {
-            padding: 20px;
-        }
-        .menu {
-            background-color: #FFCDD2;
-            padding: 20px;
+            gap: 20px;
             margin-top: 20px;
         }
-        .social-media {
-            background-color: #F6A5C0;
-            padding: 20px;
-            text-align: center;
-            color: #fff;
-            margin-top: 20px;
+        .social-icons a {
+            font-size: 24px;
+            color: #333;
         }
-        footer {
-            background-color: #F8BBD0;
-            text-align: center;
-            padding: 10px;
-            color: #fff;
-            position: fixed;
+        /* Menú */
+        .menu-section {
+            margin-top: 40px;
+        }
+        .menu-iframe {
             width: 100%;
-            bottom: 0;
+            height: 600px;
+            border: none;
+        }
+        /* Pie de página */
+        footer {
+            background-color: #FFC0CB; /* Rosa claro */
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
-
-<header>
-    <h1>Amai - Tienda de Postres</h1>
-</header>
-
-<nav>
-    <a href="#quienes-somos">Quiénes Somos</a>
-    <a href="#menu">Menú</a>
-    <a href="#redes-sociales">Redes Sociales</a>
-</nav>
-
-<section id="quienes-somos">
-    <h2>Quiénes Somos</h2>
-    <p>En Amai, somos una tienda de postres dedicada a endulzar tus días con las más deliciosas y creativas creaciones. Nuestra pasión es llevar la felicidad a través de sabores únicos y presentaciones encantadoras. Trabajamos con ingredientes de la más alta calidad para asegurar que cada bocado sea una experiencia inolvidable.</p>
-    <p>Nuestro objetivo es ser la opción número uno para todos los amantes de los postres, ofreciendo una amplia variedad que satisface todos los gustos y ocasiones.</p>
-</section>
-
-<section id="menu" class="menu">
-    <h2>Menú</h2>
-    <ul>
-        <li>Tarta de Chocolate</li>
-        <li>Cheesecake de Fresa</li>
-        <li>Macarons Variados</li>
-        <li>Cupcakes de Vainilla</li>
-        <li>Mousse de Maracuyá</li>
-    </ul>
-</section>
-
-<section id="redes-sociales" class="social-media">
-    <h2>Redes Sociales</h2>
-    <p>Síguenos en nuestras redes sociales para estar al tanto de nuestras últimas creaciones y promociones.</p>
-    <a href="https://www.facebook.com/amai" style="color: #fff;">Facebook</a> |
-    <a href="https://www.instagram.com/amai" style="color: #fff;">Instagram</a> |
-    <a href="https://www.twitter.com/amai" style="color: #fff;">Twitter</a>
-</section>
-
-<footer>
-    &copy; 2024 Amai. Todos los derechos reservados.
-</footer>
-
+    <header>
+        <div class="container">
+            <h1>Amai</h1>
+            <p>Postres Deliciosos</p>
+        </div>
+    </header>
+    <div class="container main-content">
+        <h2>Nuestros Postres</h2>
+        <p>Descubre nuestras creaciones dulces y únicas.</p>
+        <div class="social-icons">
+            <a href="https://www.tiktok.com/@amaiiip" target="_blank">
+                <img src="tiktok-icon.png" alt="TikTok">
+            </a>
+            <a href="https://www.instagram.com/amaiip/" target="_blank">
+                <img src="instagram-icon.png" alt="Instagram">
+            </a>
+        </div>
+        <div class="menu-section">
+            <h2>Menú</h2>
+            <iframe class="menu-iframe" src="https://www.canva.com/design/DAGGWYCz_Qc/I5TZtvc41PXl31Hb51OdBQ/view?utm_content=DAGGWYCz_Qc&utm_campaign=designshare&utm_medium=link&utm_source=editor"></iframe>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <p>© 2024 Amai - Postres Deliciosos</p>
+        </div>
+    </footer>
 </body>
 </html>
